--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
-<h1>Maurissa's Top Movies!</h1>
-<h2>Top 3 Of All Time</h2>
-<hr />
-<h3>Chicago</h3>
-<p>
-A Musical about various women who live in chicago, they are in prision from commiting crimes of passaion against their spouse.<br /> Fun watch with a few twist and turns!
-</p>
-<h3>Kill Bill 1 and 2</h3>
-<p>
-    A series about a woman who's husband kills her due to her knowing too much and being too deadly a killer, in the process he shots her in the head on her wedding day and cuts her baby from her stomach. <br /> 
-    We watch as she gets her revenege on all involved one by one until she reaches Bill.
-</p>
-<h3>Great Gatsby</h3>
-<p>
-    In this tragic love story, we watch a man who grew up poor fall for the girlw itht he silver spoon. He spends his entire life trying to gain the wealth to provide her with the life she wants <br />
-    Unfortunitaley, it is never enough and he ultimately dies trying.
-</p>
+<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <title>The Maurissa Experience</title>
+</head>
+
+<body>
+    <h1>Maurissa's Portfolio</h1>
+    <h2>I am a Web Developer... in training</h2>
+    <hr />
+    <h3><a href="../3.4 Birthday Invite Project/index.html" >Birthday Invite Project</a></h3>
+    <img src="./assets/images/birthday project screenshot.png" height="200" alt="My Birthday invite Project" />
+    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
+    <img src="./assets/images/movie ranking project screenshot.png" height="200" alt="My Movie ranking Project" />
+    <hr />
+    <a href="./public/about.html">About Me!</a>
+    <a href="./public/contact.html">Contact Me!</a>
+</body>
+
+</html>
