--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Maurissa's Portfolio</h1>
     <h2>I am a Web Developer... in training</h2>
     <hr />
-    <h3><a href="../3.4 Birthday Invite Project/index.html" >Birthday Invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html" >Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday project screenshot.png" height="200" alt="My Birthday invite Project" />
-    <h3><a href="../2.4 Movie Ranking Project/index.html">Movie Ranking Project</a></h3>
+    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie ranking project screenshot.png" height="200" alt="My Movie ranking Project" />
     <hr />
     <a href="./public/about.html">About Me!</a>
